[gd_scene load_steps=4 format=3 uid="uid://bvwk5n2m8ql6t"]

[ext_resource type="Script" path="res://scripts/loot/loot_manager.gd" id="1_manager"]
[ext_resource type="PackedScene" uid="uid://c2qn8xh5ml8vp" path="res://scenes/loot/container.tscn" id="2_container"]
[ext_resource type="PackedScene" uid="uid://c6slot1nvent0ry" path="res://scenes/loot/slot_inventory.tscn" id="3_inventory"]

[node name="LootScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_manager")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.05, 0.08, 1)

[node name="StarField" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="TopPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="TopPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.85, 1, 1)
theme_override_font_sizes/font_size = 28
text = "CARGO SALVAGE"

[node name="ScoreLabel" type="Label" parent="TopPanel/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "SCORE: $0"
horizontal_alignment = 2

[node name="MainArea" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 80.0
offset_right = -30.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ContainerPanel" type="PanelContainer" parent="MainArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="VBox" type="VBoxContainer" parent="MainArea/ContainerPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="MainArea/ContainerPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "CONTAINER"
horizontal_alignment = 1

[node name="Container" parent="MainArea/ContainerPanel/VBox" instance=ExtResource("2_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="InventoryPanel" type="PanelContainer" parent="MainArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="VBox" type="VBoxContainer" parent="MainArea/InventoryPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="MainArea/InventoryPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "INVENTORY"
horizontal_alignment = 1

[node name="Inventory" parent="MainArea/InventoryPanel/VBox" instance=ExtResource("3_inventory")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="BottomPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBox" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Instructions" type="Label" parent="BottomPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.5, 0.55, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Click items to search • Drag revealed items to inventory • Press SPACE to continue"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="BottomPanel/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CONTINUE"

[node name="DragLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DraggedItem" type="Control" parent="DragLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
